# AtCore-app

./: AndroidManifest.xml  CMakeLists.txt  ControlPanel.qml  LoggerPage.qml  Pie.qml  Principal.qml  README.md  SettingsPage.qml  main.cpp  main.qml  main_mobile.qml  resources.qrc
icons/: CMakeLists.txt
logger/: CMakeLists.txt  LoggerComponent.qml  logger.cpp  logger.h  logger.qrc
viewer3d/: AnimatedEntity.qml  CMakeLists.txt  Viewer3D.qml  fileloader.cpp  fileloader.h  gcodeto4d.cpp  gridmesh.cpp  viewer3d.qrc
